# stl_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO_LIST.md  house.stl  main.cpp  main.mm
__old/: main.cpp
__old/include/: fwd_decl.h  stlv.h  stlv_utils.h
__old/include/application/: events.h  logger.h
__old/include/platform/: platform.h
__old/src/application/: app.cpp  events.cpp  logger.cpp
__old/src/core/: init_core.cpp
__old/src/platform/: platform_glfw.cpp
assets/shaders/: shader.vert
cmake/: CompilerOptions.cmake
cmake_local/: STLVClangFlags.cmake  STLVDefaultFlags.cmake  STLVGCCFlags.cmake  STLVMSVCFlags.cmake
engine/: CMakeLists.txt
engine/include/: fwd.h  fwd_internal.h  init_core.h  stlv.h  stlv_entry.inl  stlv_utils.h
engine/include/application/: app_engine.h  app_manager.h  clock.h  events.h  input.h  logger.h  timer.h
engine/include/platform/: platform.h
engine/include/renderer/: renderer_backend.h  renderer_frontend.h
engine/include/renderer/backend/: renderer_vulkan.h
engine/include/renderer/backends/vulkan/: vulkan_backend.h  vulkan_platform.h
engine/lib/core/: .gitmodules  CMakeLists.txt  CMakePresets.json  core_sandbox.cpp  core_test.cpp
engine/lib/core/.github/workflows/: build_cmake.yml  mac_cmake.yml  ubuntu_cmake.yml  windows_cmake.yml
engine/lib/core/include/: core.h  core_API.h  core_algorithms.h  core_alloc.h  core_ansi_escape_codes.h  core_arr.h  core_bits.h  core_cmd_flag_parser.h  core_compiler.h  core_config.h.in  core_cptr.h  core_cptr_conv.h  core_expected.h  core_hash.h  core_hash_map.h  core_intrinsics.h  core_ints.h  core_mem.h  core_rnd.h  core_sarr.h  core_str_builder.h  core_system_checks.h  core_traits.h  core_tuple.h  core_types.h  core_unique_ptr.h  core_utf.h  core_utils.h
engine/lib/core/include/math/: core_bbox.h  core_lines.h  core_math.h  core_matrix.h  core_projections.h  core_transforms.h  core_vec.h
engine/lib/core/include/plt/: core_fs.h  core_pages.h  core_path.h  core_plt_error.h  core_stacktrace.h  core_threading.h  core_time.h
engine/lib/core/include/plt/unix/: unix_fs.h  unix_stacktrace.h  unix_threading.h
engine/lib/core/include/plt/win/: win_fs.h  win_stacktrace.h  win_threading.h
engine/lib/core/scripts/: test_all_presets.sh
engine/lib/core/src/: core_bits.cpp  core_hash.cpp  core_intrinsics.cpp  core_mem.cpp  core_rnd.cpp  core_utils.cpp
engine/lib/core/src/allocators/: core_alloc_bump.cpp  core_alloc_stats_std.cpp  core_alloc_std.cpp
engine/lib/core/src/math/: core_projections.cpp
engine/lib/core/src/plt/unix/: unix_fs.cpp  unix_pages.cpp  unix_plt_error.cpp  unix_threading.cpp  unix_time.cpp
engine/lib/core/src/plt/win/: win_fs.cpp  win_pages.cpp  win_plt_error.cpp  win_threading.cpp  win_time.cpp
engine/lib/core/tests/: t-algorithms.cpp  t-arr.cpp  t-bits.cpp  t-cmd_flag_parser.cpp  t-cptr.cpp  t-cptr_conv.cpp  t-defer.cpp  t-expected.cpp  t-hash.cpp  t-hash_map.cpp  t-index.h  t-index_core_init.cpp  t-intrinsics.cpp  t-ints.cpp  t-mem.cpp  t-rnd.cpp  t-sarr.cpp  t-str_builder.cpp  t-traits.cpp  t-tuple.cpp  t-unique_ptr.cpp  t-utf.cpp
engine/lib/core/tests/allocators/: t-alloc_bump.cpp  t-alloc_std.cpp  t-alloc_std_stats.cpp
engine/lib/core/tests/math/: t-math.cpp  t-matrix.cpp  t-transforms.cpp  t-vec.cpp
engine/lib/core/tests/plt/: t-fs.cpp  t-pages.cpp  t-plt_err.cpp  t-stacktrace.cpp  t-threading.cpp  t-time.cpp
engine/src/: init_core.cpp
engine/src/___renderer/backend/: device_vulkan.cpp  frame_buffer_vulkan.cpp  image_vulkan.cpp  renderer_vulkan.cpp  swapchain_vulkan.cpp
engine/src/application/: app_engine.cpp  app_manager.cpp  clock.cpp  events.cpp  input.cpp  logger.cpp  timer.cpp
engine/src/platform/: glfw_platform.cpp
engine/src/renderer/: renderer_frontend.cpp
engine/src/renderer/backend/: command_buffer_vulkan.cpp  device_vulkan.cpp  image_vulkan.cpp  renderer_vulkan.cpp  renderpass_vulkan.cpp  swapchain_vulkan.cpp  sync_objects_vulkan.cpp  utils_vulkan.cpp
engine/src/renderer/backends/vulkan/: vulkan_backend.cpp  vulkan_command_buffer.cpp  vulkan_device.cpp  vulkan_frame_buffer.cpp  vulkan_image.cpp  vulkan_renderpass.cpp  vulkan_swapchain.cpp  vulkan_sync_objects.cpp  vulkan_utils.cpp
include/: __vulkan_device_picker.h  __vulkan_swapchain.h  app.h  app_error.h  app_logger.h  basic.h  fwd_decl.h  platform.h  renderer.h  stlv.h  user_input.h  vulkan_device_picker.h  vulkan_include.h  vulkan_renderer.h  vulkan_renderpipeline.h  vulkan_swapchain.h
include/application/: app.h  events.h  logger.h
include/core/: init_core.h
include/platform/: platform.h
lib/MoltenVK/sdk-1.3.296.0/: MoltenVK_icd.json
scripts/: compile_shaders.sh  env.sh
src/: __vulkan_renderer.cpp  app.cpp  app_error.cpp  platform.cpp  platform_mac.mm  platform_wayland.cpp  platform_win32.cpp  platform_x11.cpp  stl_viewer.h  user_input.cpp  vulkan_device.cpp  vulkan_device_picker.cpp  vulkan_render_info.cpp  vulkan_renderer.cpp  vulkan_renderpipeline.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp
src/application/: app.cpp  events.cpp  logger.cpp
src/core/: init_core.cpp
src/platform/: platform_glfw.cpp
testbed/: CMakeLists.txt  main.cpp
testbed/app/: CMakeLists.txt  app.cpp  app.h
tools/sandbox/: sandbox.cpp  sandbox.h  sandbox.mm
